add condition for button create hddt

--- a/z_sinvoice/views/stock_picking_views.xml
+++ b/z_sinvoice/views/stock_picking_views.xml
@@ -19,15 +19,16 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='action_confirm']" position="before">
-                    <button name="create_hddt" type="object" string="Tạo HĐĐT" confirm="Are you sure you?" attrs="{'invisible': [('x_invoice_status', '=', 'status_created')]}"/>
+                    <button name="create_hddt" type="object" string="Tạo HĐĐT" confirm="Are you sure you?" attrs="{'invisible': ['|','|',('state', '!=', 'done'),('x_invoice_status', '=', 'status_created'),('x_able_to_sync', '=', False)]}"/>
                     <button name="cancel_hddt" type="object" string="Hủy HĐĐT" confirm="Are you sure you?" attrs="{'invisible': [('x_invoice_status', 'in', ['status_not_sync','status_canceled'])]}"/>
                 </xpath>
-                <xpath expr="//page" position="after">
-                    <page string="Thông Tin HĐĐT">
+                <xpath expr="//page[last()]" position="after">
+                    <page string="Thông Tin HĐĐT" attrs="{'invisible': [('x_able_to_sync', '=', False)]}" >
                         <group>
                             <group>
                                 <field name="x_economic_contract_number"/>
                                 <field name="x_transportation_method"/>
+                                <field name="x_able_to_sync" invisible="1"/>
                             </group>
                             <group>
                                 <field name="x_about"/>
