--- a/website_slideshow/views/assets.xml
+++ b/website_slideshow/views/assets.xml
@@ -42,11 +42,10 @@
             </xpath>
         </template>
 
-        <template id="editor_asset_extension" name="Editor Asset Extension" inherit_id="website.assets_editor">
-            <xpath expr="link[last()]" position="after">
+        <template id="editor_asset_extension" name="Editor Asset Extension" inherit_id="website.assets_frontend">
+            <xpath expr="script[last()]" position="after">
                 <script src="/website_slideshow/static/src/js/slideshow.js" type="text/javascript"/>
             </xpath>
         </template>
-
     </data>
 </odoo>
