--- a/z_sinvoice/views/account_invoice_views.xml
+++ b/z_sinvoice/views/account_invoice_views.xml
@@ -8,8 +8,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//button[@id='account_invoice_payment_btn']" position="before">
                     <!--<button name="show_hddt_data" type="object" string="Show HĐĐT data" confirm="Are you sure you?"/>-->
-                    <button name="create_hddt" type="object" string="Tạo HĐĐT" confirm="Are you sure you?" attrs="{'invisible': [('x_invoice_status', '=', 'status_created')]}"/>
-                    <button name="cancel_hddt" type="object" string="Hủy HĐĐT" confirm="Are you sure you?" attrs="{'invisible': [('x_invoice_status', 'in', ['status_not_sync','status_canceled'])]}"/>
+                    <button name="create_hddt" type="object" string="Tạo HĐĐT" confirm="Bạn có chắc chắn TẠO hóa đơn điện tử này không?" attrs="{'invisible': [('x_invoice_status', 'in', ['status_created','status_canceled'])]}"/>
+                    <button name="cancel_hddt" type="object" string="Hủy HĐĐT" confirm="Bạn có chắc chắn HỦY không?" attrs="{'invisible': [('x_invoice_status', 'in', ['status_not_sync','status_canceled'])]}"/>
                 </xpath>
                 <xpath expr="//page" position="after">
                     <page string="Thông Tin HĐĐT">
